# Popup-Adventure

./: .gitignore  README.md  template_story.json
.github/workflows/: BuildLinux.yml  BuildWindows.yml  test.yml
NarrativeBuilder/: CMakeLists.txt  README.md  story_template.json
Popup-Adventure/: CMakeLists.txt  LogicFlow.scxml  Popup-Adventure_en_US.ts  choice.cpp  choice.h  game.cpp  game.h  level.cpp  level.h  main.cpp  packaging.cmake  player.cpp  player.h  popupwindow.cpp  popupwindow.h  story.cpp  story.h  story.json  story_goncharov.json  story_short.json  storysave.cpp  storysave.h  windeploymacro.cmake  windeployqt.cmake
Popup-Adventure/.github/workflows/: test.yml
Popup-Adventure/Stories/: story_short.json
Popup-Adventure/resources/: critError.icns
